# ElectricityDemand

./: .gitignore  README.md  pyproject.toml  todo.md
.cursor/rules/: base.mdc  pytorch.mdc  role.mdc
models/mllib_gbt_regression_model/metadata/: .part-00000.crc  part-00000
models/mllib_gbt_regression_model/treesMetadata/: .part-00000-04d023c4-6bed-4c7d-977e-463de0b54e49-c000.snappy.parquet.crc
models/mllib_linear_regression_model/metadata/: .part-00000.crc  part-00000
reports/: beamer.tex  main.tex
src/electricity_demand_analysis/analysis/: eda.py
src/electricity_demand_analysis/data/: loader.py  preprocessor.py
src/electricity_demand_analysis/preprocessing/: preprocess.py
src/electricitydemand/: 00_download_data.py  01_convert_parquet.py  0_download_data.py  10_analyze_weather_completeness.py  1_run_eda.py  2_run_preprocessing.py  3_run_feature_engineering.py  4_run_model_training.py  __init__.py  download_data.py  eda.py  load_data.py  preprocessing.py  run_eda.py
src/electricitydemand/data/: loader.py
src/electricitydemand/eda/: __init__.py  analyze_demand.py  analyze_metadata.py  analyze_relationships.py  analyze_time.py  analyze_weather.py  data_quality.py  load_data.py
src/electricitydemand/funcs/: load_data.py  preprocessing.py
src/electricitydemand/utils/: convert_parquet.py  eda_utils.py  log_utils.py  project_utils.py
