[project]
name = "electricity_demand_analysis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Steven Moder", email = "java20131114@gmail.com" }
]
dependencies = [
    "datasets>=3.5.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "fastparquet>=2024.11.0",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
    "dask[distributed]>=2025.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/electricity_demand_analysis"]
