[project]
name = "electricitydemand"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Steven Moder", email = "java20131114@gmail.com" }
]
dependencies = [
    "dask[complete]>=2025.3.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "fastparquet>=2024.11.0",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "hvplot>=0.11.2",
    "datasets>=3.5.0",
    "loguru>=0.7.3",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/electricitydemand"]
